--- a/gateway-service.properties
+++ b/gateway-service.properties
@@ -1,13 +1,13 @@
-# Spring Cloud Gateway Configuration
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
-
-spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=http://localhost:4200
-spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
-spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=GET, POST, PUT, DELETE, OPTIONS
-spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
-spring.cloud.gateway.globalcors.cors-configurations.[/**].maxAge=3600
-
-
-spring.cloud.gateway.default-filters[0]=DedupeResponseHeader=Access-Control-Allow-Credentials, Access-Control-Allow-Origin
-
-# Eureka Client Configuration
+## Spring Cloud Gateway Configuration
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+#
+#spring.cloud.gateway.globals.cors-configurations.[/**].allowedOrigins=http://localhost:4200
+#spring.cloud.gateway.globals.cors-configurations.[/**].allowedHeaders=*
+#spring.cloud.gateway.globals.cors-configurations.[/**].allowedMethods=GET, POST, PUT, DELETE, OPTIONS
+#spring.cloud.gateway.globals.cors-configurations.[/**].allowCredentials=true
+#spring.cloud.gateway.globals.cors-configurations.[/**].maxAge=3600
+#
+#
+#spring.cloud.gateway.default-filters[0]=DedupeResponseHeader=Access-Control-Allow-Credentials, Access-Control-Allow-Origin
+#
+## Eureka Client Configuration
